--- a/citas-editar.html
+++ b/citas-editar.html
@@ -36,9 +36,9 @@
                                         <div class="form-group">
                                             <label>Cliente</label>
                                             <div class="input-group">
-                                                <input type="text" class="form-control" name="cliente" title="Cliente"/>
+                                                <input type="text" class="form-control" name="Paciente" title="Paciente"/>
                                                 <span class="input-group-btn">
-                                                    <a href="#" data-toggle="modal" data-target="#modelCliente" title="Buscar Cliente" class="btn btn-default" type="button">
+                                                    <a href="#" data-toggle="modal" data-target="#modePaciente" title="Buscar Paciente" class="btn btn-default" type="button">
                                                         <i class="fa fa-search"></i>
                                                     </a>
                                                 </span>
@@ -157,7 +157,7 @@
                                                             <tr class="odd">
                                                                 <td>&nbsp;</td>
                                                                 <td>&nbsp;</td>
-                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>1
                                                                 <td class="text-center">
                                 									<a href="#" title="Quitar"><i class="fa fa-remove iconRemoveColor"></i></a>
                                 								</td>
