--- a/citas-nuevo.html
+++ b/citas-nuevo.html
@@ -34,11 +34,11 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label>Cliente</label>
+                                            <label>Paciente</label>
                                             <div class="input-group">
-                                                <input type="text" class="form-control" name="cliente" title="Cliente"/>
+                                                <input type="text" class="form-control" name="paciente" title="Paciente"/>
                                                 <span class="input-group-btn">
-                                                    <a href="#" data-toggle="modal" data-target="#modelCliente" title="Buscar Cliente" class="btn btn-default" type="button">
+                                                    <a href="#" data-toggle="modal" data-target="#modelPaciente" title="Buscar Paciente" class="btn btn-default" type="button">
                                                         <i class="fa fa-search"></i>
                                                     </a>
                                                 </span>
