--- a/orden-servicios-nuevo.html
+++ b/orden-servicios-nuevo.html
@@ -20,77 +20,198 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label>Tipo Documento</label>
-                                            <select class="form-control input-sm" title="Tipo Documento" name="tipoDocumento">
-                                                <option selected>(Seleccione)</option>
-                                                <option>DNI</option>
-                                                <option>CE</option>
-                                                <option>LE</option>
-                                            </select>
+                                            <label>N&uacute;m.</label>
+                                            <input class="form-control input-sm" placeholder="" title="N&uacute;m. Servicio">
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label>N&uacute;mero Documento</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="N&uacute;mero Documento" name="nDocumento">
+                                            <label>Fecha</label>
+                                            <input class="form-control input-sm" placeholder="" title="Fecha" type="date">
                                             <span class="help-block"></span>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label>Cita</label>
+                                            <div class="input-group">
+                                                <input type="text" class="form-control" name="cita" title="Cita"/>
+                                                <span class="input-group-btn">
+                                                    <a href="#" data-toggle="modal" data-target="#modelCita" title="Buscar cita" class="btn btn-default" type="button">
+                                                        <i class="fa fa-search"></i>
+                                                    </a>
+                                                </span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-								<div class="row">
-									<div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Nombres</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Nombres" name="nombres">
-                                            <span class="help-block"></span>
-                                        </div>
-                                    </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <strong>Servicio: Baño</strong>
+                            </div>
+                            <div class="panel-body"> 
+                                <div class="row">
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label>Apellido Paterno</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Apellido Paterno" name="apePaterno">
-                                            <span class="help-block"></span>
+                                            <label>Producto</label>
+                                            <div class="input-group">
+                                                <input type="text" class="form-control" name="cita" title="Producto"/>
+                                                <span class="input-group-btn">
+                                                    <a href="#" data-toggle="modal" data-target="#modelProducto" title="Buscar producto" class="btn btn-default" type="button">
+                                                        <i class="fa fa-search"></i>
+                                                    </a>
+                                                </span>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-4">
+                                    <div class="col-md-3">
                                         <div class="form-group">
-                                            <label>Apellido Materno</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Apellido Materno" name="apeMaterno">
+        									<label>Cantidad</label>
+        									<input type="number" class="form-control input-sm" title="Cantidad" name="Cantidad" value="1" min="1">
+        									<span class="help-block"></span>
+        								</div>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <div class="form-group">
+                                            <label></label>
+                                            <a href="#" class="btn btn-sm btn-primary btn-block" title="Agregar"><i class="fa fa-new"></i>&nbsp; AGREGAR</a>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Direcci&oacute;n</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Direcci&oacute;n" name="direccion">
-                                            <span class="help-block"></span>
+                                    <div class="col-md-12">
+                                        <div class="panel panel-default">
+                                            <div class="panel-body">
+                                                <div class="table-responsive">
+                                                    <table class="table table-striped table-bordered table-hover" id="datable-grilla-bandeja-sol-usuario-ver">
+                                                        <thead>	
+                                                            <tr>
+                                                                <th class="text-center">Item</th>
+                                                                <th class="text-center">Nombre Producto</th>
+                                                                <th class="text-center">Cantidad</th>
+                                                                <th class="text-center">Acci&oacute;n</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            <tr class="odd">
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                                <td class="text-center">
+                                                                    <a href="#" title="Editar"><i class="fa fa-pencil iconPencilColor"></i></a>
+                                									<a href="#" title="Quitar"><i class="fa fa-remove iconRemoveColor"></i></a>
+                                								</td>
+                                                            </tr>
+                                                            <tr class="even">
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                                <td class="text-center">
+                                                                    <a href="#" title="Editar"><i class="fa fa-pencil iconPencilColor"></i></a>
+                                									<a href="#" title="Quitar"><i class="fa fa-remove iconRemoveColor"></i></a>
+                                								</td>
+                                                            </tr>
+                                                            <tr class="odd">
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                                <td class="text-center">
+                                                                    <a href="#" title="Editar"><i class="fa fa-pencil iconPencilColor"></i></a>
+                                									<a href="#" title="Quitar"><i class="fa fa-remove iconRemoveColor"></i></a>
+                                								</td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <strong>Servicio: Desparasitaci&oacute;n</strong>
+                            </div>
+                            <div class="panel-body"> 
+                                <div class="row">
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label>Fecha de Nacimiento</label>
-                                            <input class="form-control input-sm" placeholder="" title="Fecha de Nacimiento" name="fecha" id="fecha" type="date">
+                                            <label>Producto</label>
+                                            <div class="input-group">
+                                                <input type="text" class="form-control" name="cita" title="Producto"/>
+                                                <span class="input-group-btn">
+                                                    <a href="#" data-toggle="modal" data-target="#modelProducto" title="Buscar producto" class="btn btn-default" type="button">
+                                                        <i class="fa fa-search"></i>
+                                                    </a>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group">
+        									<label>Cantidad</label>
+        									<input type="number" class="form-control input-sm" title="Cantidad" name="Cantidad" value="1" min="1">
+        									<span class="help-block"></span>
+        								</div>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <div class="form-group">
+                                            <label></label>
+                                            <a href="#" class="btn btn-sm btn-primary btn-block" title="Agregar"><i class="fa fa-new"></i>&nbsp; AGREGAR</a>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Tel&eacute;fono</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Tel&eacute;fono" name="telefono">
-                                            <span class="help-block"></span>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Email</label>
-                                            <div class="input-group input-group-sm">
-                                                <span class="input-group-addon" id="sizing-addon3">@</span>
-                                                <input type="text" class="form-control" placeholder="Correo electr&oacute;nico" aria-describedby="sizing-addon3">
+                                    <div class="col-md-12">
+                                        <div class="panel panel-default">
+                                            <div class="panel-body">
+                                                <div class="table-responsive">
+                                                    <table class="table table-striped table-bordered table-hover" id="datable-grilla-bandeja-sol-usuario-ver">
+                                                        <thead>	
+                                                            <tr>
+                                                                <th class="text-center">Item</th>
+                                                                <th class="text-center">Nombre Producto</th>
+                                                                <th class="text-center">Cantidad</th>
+                                                                <th class="text-center">Acci&oacute;n</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            <tr class="odd">
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                                <td class="text-center">
+                                									<a href="#" title="Editar"><i class="fa fa-pencil iconPencilColor"></i></a>
+                                									<a href="#" title="Quitar"><i class="fa fa-remove iconRemoveColor"></i></a>
+                                								</td>
+                                                            </tr>
+                                                            <tr class="even">
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                                <td class="text-center">
+                                                                    <a href="#" title="Editar"><i class="fa fa-pencil iconPencilColor"></i></a>
+                                									<a href="#" title="Quitar"><i class="fa fa-remove iconRemoveColor"></i></a>
+                                								</td>
+                                                            </tr>
+                                                            <tr class="odd">
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                                <td class="text-center">
+                                                                    <a href="#" title="Editar"><i class="fa fa-pencil iconPencilColor"></i></a>
+                                									<a href="#" title="Quitar"><i class="fa fa-remove iconRemoveColor"></i></a>
+                                								</td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
