--- a/orden-servicios-ver.html
+++ b/orden-servicios-ver.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12">
         <h4 class="page-header">
-			<strong> VER CITA </strong> <br/>
+			<strong> CREAR ORDEN DE SERVICIO </strong> <br/>
             <div class="css3gradient"></div>
         </h4>
     </div>
@@ -14,43 +14,28 @@
                     <fieldset>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <strong>DATOS DE LA CITA</strong>
+                                <strong>DATOS DE LA ORDEN DE SERVICIO</strong>
                             </div>
                             <div class="panel-body"> 
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="form-group">
+                                            <label>N&uacute;m.</label>
+                                            <input class="form-control input-sm" placeholder="" title="N&uacute;m. Servicio" value="2" disabled>
+                                            <span class="help-block"></span>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group">
                                             <label>Fecha</label>
-                                            <input class="form-control input-sm" placeholder="" title="Fecha" type="date" value="12/08/2015" disabled>
+                                            <input class="form-control input-sm" placeholder="" title="Fecha" type="date" value="13/09/2015" disabled>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label>Hora</label>
-                                            <input class="form-control input-sm" placeholder="" title="Hora" type="time" value="12:00" disabled>
-                                            <span class="help-block"></span>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Paciente</label>
-                                            <div class="input-group">
-                                                <input type="text" class="form-control" name="paciente" title="Paciente"/>
-                                                <span class="input-group-btn">
-                                                    <a href="#" data-toggle="modal" data-target="#modelPaciente" title="Buscar Paciente" class="btn btn-default" type="button" disabled>
-                                                        <i class="fa fa-search"></i>
-                                                    </a>
-                                                </span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-								<div class="row">
-									<div class="col-md-12">
-                                        <div class="form-group">
-                                            <label>Observaciones</label>
-                                            <textarea class="form-control input-sm" placeholder="" title="Observaciones" row="3" disabled></textarea>
+                                            <label>Cita</label>
+                                            <input type="text" class="form-control" name="cita" title="Cita" value="CITA01" disabled/>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
@@ -59,7 +44,50 @@
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <strong>Servicios</strong>
+                                <strong>Servicio: Baño</strong>
+                            </div>
+                            <div class="panel-body">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="panel panel-default">
+                                            <div class="panel-body">
+                                                <div class="table-responsive">
+                                                    <table class="table table-striped table-bordered table-hover" id="datable-grilla-bandeja-sol-usuario-ver">
+                                                        <thead>	
+                                                            <tr>
+                                                                <th class="text-center">Item</th>
+                                                                <th class="text-center">Nombre Producto</th>
+                                                                <th class="text-center">Cantidad</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            <tr class="odd">
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                            </tr>
+                                                            <tr class="even">
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                            </tr>
+                                                            <tr class="odd">
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                                <td>&nbsp;</td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <strong>Servicio: Desparasitaci&oacute;n</strong>
                             </div>
                             <div class="panel-body"> 
                                 <div class="row">
@@ -70,8 +98,8 @@
                                                     <table class="table table-striped table-bordered table-hover" id="datable-grilla-bandeja-sol-usuario-ver">
                                                         <thead>	
                                                             <tr>
-                                                                <th class="text-center">C&oacute;d. Servicio</th>
-                                                                <th class="text-center">Nombre Servicio</th>
+                                                                <th class="text-center">Item</th>
+                                                                <th class="text-center">Nombre Producto</th>
                                                                 <th class="text-center">Cantidad</th>
                                                             </tr>
                                                         </thead>
@@ -107,17 +135,10 @@
     </div>
     <div> &nbsp; </div>
     <div class="row">
-        <div class="col-md-2 col-md-offset-4">
+        <div class="col-md-2 col-md-offset-5">
             <div class="form-group">
                 <label>&nbsp;</label>
-                <a href="javascript:cargar( 'citas.html' );" class="btn btn-sm btn-primary btn-block" title="Nuevo"><i class="fa fa-disk"></i>&nbsp; GUARDAR</a>
-                <span class="help-block"></span>
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="form-group">
-                <label>&nbsp;</label>
-                <a href="javascript:cargar( 'citas.html' );" class="btn btn-sm btn-primary btn-block" title="Editar"><i class="fa fa-back"></i>&nbsp; CANCELAR</a>
+                <a href="javascript:cargar( 'orden-servicio.html' );" class="btn btn-sm btn-primary btn-block" title="Cerrar"><i class="fa fa-back"></i>&nbsp; CERRAR</a>
                 <span class="help-block"></span>
             </div>
         </div>
