--- a/citas-editar.html
+++ b/citas-editar.html
@@ -63,7 +63,7 @@
                             </div>
                             <div class="panel-body"> 
                                 <div class="row">
-                                    <div class="col-md-4 col-md-offset-4">
+                                    <div class="col-md-6 col-md-offset-3">
                                         <div aria-label="First group" role="group" class="btn-group">
                                             <button class="btn btn-default" type="button" disabled>08:00</button>
                                             <button class="btn btn-default" type="button">09:00</button>
@@ -76,7 +76,7 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-4 col-md-offset-4">
+                                    <div class="col-md-6 col-md-offset-3">
                                         <div aria-label="First group" role="group" class="btn-group">
                                             <button class="btn btn-default" type="button">15:00</button>
                                             <button class="btn btn-default" type="button" disabled>16:00</button>
@@ -157,7 +157,7 @@
                                                             <tr class="odd">
                                                                 <td>&nbsp;</td>
                                                                 <td>&nbsp;</td>
-                                                                <td>&nbsp;</td>1
+                                                                <td>&nbsp;</td>
                                                                 <td class="text-center">
                                 									<a href="#" title="Quitar"><i class="fa fa-remove iconRemoveColor"></i></a>
                                 								</td>
